[package]
name = "jump"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
walkdir = '2'
home = '0.5.9'
tempfile = "3.25.0"
chrono = "0.4.43"
ormlite = { version = "0.24.3", features = ["sqlite"] }
sqlx = { version = "0.8.6", features = ["chrono", "sqlite"] }
tokio = { version = "1.49.0", features = ["full"] }
